<resources>
    <string name="app_name">COV-ID.me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COV-ID.me</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My QR</string>
    <string name="menu_camera">Track</string>
    <string name="menu_checkup">Check-up</string>
    <string name="menu_result">Test results</string>

    <string name="button_calculate">Check</string>
    <string name="button_submit">Submit</string>

    <string name="results">Were you diagnosed with COVID-19?</string>
    <string name="doctor">By my doctor</string>
    <string name="test_result">Through a positive test result</string>

    <string name="results_advice">Note: Submitting your results will notify all the people
        you\'ve been in contact with and turn your status RED.</string>

    <string name="symptoms">Do you have any of these symptoms?</string>
    <string name="fever">Fever</string>
    <string name="cough">Dry cough</string>
    <string name="breath">Shortness of breath</string>
    <string name="fatigue">Fatigue</string>
    <string name="body_ache">Body aches</string>
    <string name="headache">Headache</string>
    <string name="runny_nose">Runny nose</string>
    <string name="sore_throat">Sore throat</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="loss_of_smell">Loss of smell</string>
</resources>
