<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.checkup.CheckupFragment">

    <TextView
        android:id="@+id/symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/symptoms"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/fever"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/fever"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/symptoms" />

    <Switch
        android:id="@+id/cough"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/cough"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/fever" />

    <Switch
        android:id="@+id/breath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/breath"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/cough" />

    <Switch
        android:id="@+id/fatigue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/fatigue"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/breath" />

    <Switch
        android:id="@+id/body_ache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/body_ache"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/fatigue" />

    <Switch
        android:id="@+id/headache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/headache"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/body_ache" />

    <Switch
        android:id="@+id/runny_nose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/runny_nose"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/headache" />

    <Switch
        android:id="@+id/sore_throat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/sore_throat"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/runny_nose" />

    <Switch
        android:id="@+id/diarrhea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/diarrhea"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/sore_throat" />

    <Switch
        android:id="@+id/loss_of_smell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/loss_of_smell"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/diarrhea" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:text="@string/button_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loss_of_smell" />

</androidx.constraintlayout.widget.ConstraintLayout>